<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dontbefa.hcmut.dontbefa.LoginActivity">



    <ImageView
        android:layout_width="327dp"
        android:layout_height="80dp"
        android:id="@+id/imageView"
        android:src="@drawable/main_logo"
        android:layout_marginTop="50dp" />

    <LinearLayout android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:background="#07000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:background="#07000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


             <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorNormal="@color/blue_normal"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="Success"
                custom:pb_textProgress="Loading"
                custom:pb_textError="Error"
                custom:pb_colorError="@color/red_error" />
        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/email_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/action_sign_up"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="Success"
            custom:pb_textProgress="Loading"
            custom:pb_textError="Error"
            custom:pb_colorError="@color/red_error" />

        </LinearLayout>
</LinearLayout>
